[GTK] Cancel the current active WebKitAuthenticationRequest on load failed https://bugs.webkit.org/show_bug.cgi?id=120350

Patch by Anton Obzhirov <a.obzhirov@samsung.com> on 2013-09-09
Reviewed by Carlos Garcia Campos.

The default dialog does not get closed and the authentication is not cancelled
if loading fails or is stopped on a page which requires HTTP authentication.

This patch cancels the authentication request on load failed
and adds new authentication cancelled signal in WebKitAuthenticationRequest
to allow the application handling of authentication UI.

* UIProcess/API/gtk/WebKitAuthenticationDialog.cpp:
(authenticationCancelled):
(webkitAuthenticationDialogInitialize):
(webkitAuthenticationDialogDispose):
(webkitAuthenticationDialogNew):
* UIProcess/API/gtk/WebKitAuthenticationDialog.h:
* UIProcess/API/gtk/WebKitAuthenticationRequest.cpp:
(webkit_authentication_request_class_init):
(webkit_authentication_request_cancel):
* UIProcess/API/gtk/WebKitWebView.cpp:
(webkitWebViewAuthenticate):
(webkitWebViewLoadFailed):
(webkitWebViewHandleAuthenticationChallenge):
(webkitWebViewCancelAuthenticationRequest):
* UIProcess/API/gtk/tests/TestWebKitWebView.cpp:
(testWebViewAuthenticationLoadCancelled):
(beforeAll):

Canonical link: https://commits.webkit.org/138932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155347 268f45cc-cd09-0410-ab3c-d52691b4dbfc